refactor: make skills portable for Claude and Codex